@@ -47,26 +47,6 @@
 #ifdef CONFIG_PM
 
 /****************************************************************************
- * Pre-processor Definitions
- ****************************************************************************/
-
-/****************************************************************************
- * Private Types
- ****************************************************************************/
-
-/****************************************************************************
- * Private Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Private Data
- ****************************************************************************/
-
-/****************************************************************************
- * Public Data
- ****************************************************************************/
-
-/****************************************************************************
  * Private Functions
  ****************************************************************************/
 
@@ -213,7 +193,7 @@ int pm_changestate(int domain, enum pm_state_e newstate)
        * the preceding state.
        */
 
-      newstate = g_pmglobals.state;
+      newstate =  g_pmglobals.domain[domain].state;
       (void)pm_prepall(domain, newstate);
     }
 
@@ -222,7 +202,7 @@ int pm_changestate(int domain, enum pm_state_e newstate)
    */
 
   pm_changeall(domain, newstate);
-  g_pmglobals.state = newstate;
+  g_pmglobals.domain[domain].state = newstate;
 
   /* Restore the interrupt state */
 
