@@ -48,30 +48,6 @@
 #ifdef CONFIG_PM
 
 /****************************************************************************
- * Pre-processor Definitions
- ****************************************************************************/
-
-/****************************************************************************
- * Private Types
- ****************************************************************************/
-
-/****************************************************************************
- * Private Function Prototypes
- ****************************************************************************/
-
-/****************************************************************************
- * Private Data
- ****************************************************************************/
-
-/****************************************************************************
- * Public Data
- ****************************************************************************/
-
-/****************************************************************************
- * Private Functions
- ****************************************************************************/
-
-/****************************************************************************
  * Public Functions
  ****************************************************************************/
 
@@ -99,17 +75,23 @@
  *   is completed.
  *
  * Input Parameters:
- *   None
+ *   domain - the PM domain to check
  *
  * Returned Value:
  *   The recommended power management state.
  *
  ****************************************************************************/
 
-enum pm_state_e pm_checkstate(void)
+enum pm_state_e pm_checkstate(int domain)
 {
+  FAR struct pm_domain_s *pdom;
   systime_t now;
   irqstate_t flags;
+
+  /* Get a convenience pointer to minimize all of the indexing */
+
+  DEBUGASSERT(domain >= 0 && domain < CONFIG_PM_NDOMAINS);
+  pdom = &g_pmglobals.domain[domain];
 
   /* Check for the end of the current time slice.  This must be performed
    * with interrupts disabled so that it does not conflict with the similar
@@ -127,7 +109,7 @@ enum pm_state_e pm_checkstate(void)
    */
 
    now = clock_systimer();
-   if (now - g_pmglobals.stime >= TIME_SLICE_TICKS)
+   if (now - pdom->stime >= TIME_SLICE_TICKS)
     {
       int16_t accum;
 
@@ -136,16 +118,16 @@ enum pm_state_e pm_checkstate(void)
        * still disabled.
        */
 
-      accum             = g_pmglobals.accum;
-      g_pmglobals.stime = now;
-      g_pmglobals.accum = 0;
+      accum       = pdom->accum;
+      pdom->stime = now;
+      pdom->accum = 0;
 
       /* Reassessing the PM state may require some computation.  However,
        * the work will actually be performed on a worker thread at a user-
        * controlled priority.
        */
 
-      (void)pm_update(accum);
+      (void)pm_update(domain, accum);
     }
 
   leave_critical_section(flags);
@@ -156,7 +138,7 @@ enum pm_state_e pm_checkstate(void)
    * state should be current:
    */
 
-  return g_pmglobals.recommended;
+  return pdom->recommended;
 }
 
 #endif /* CONFIG_PM */
